--- a/myapp/templates/myapp/post_form.html
+++ b/myapp/templates/myapp/post_form.html
@@ -1,12 +1,15 @@
 {% extends 'myapp/base.html' %}
 
 {% block content %}
-<h2>登録ページ</h2>
-
-<form action="" method="POST">
-	{% csrf_token %}
-	<p>{{ form.title }}</p>
-	<p>{{ form.content }}</p>
-	<button type="submit">保存</button>
-</form>
+<div class="row">
+	<div class="col-md-9">
+		<h2 class="pt-3 pb-3">登録・更新</h2>
+		<form action="" method="POST">
+			{% csrf_token %}
+			<p class="form-group"><label>タイトル</label>{{ form.title }}</p>
+			<p class="form-group"><label>内容</label>{{ form.content }}</p>
+			<button class="btn btn-primary" type="submit">保存</button>
+		</form>
+	</div>
+</div>
 {% endblock %}
