--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -34,7 +34,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark primary-color">
       <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">My Blog</a>
+      <a class="navbar-brand" href="/">My Blog</a>
 
       <!-- Collapse button -->
       <button
@@ -54,13 +54,13 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="{% url 'myapp:index' %}"
               >Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="/admin" target="_blank">管理画面へ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -74,13 +74,13 @@
               data-toggle="dropdown"
               aria-haspopup="true"
               aria-expanded="false"
-              >Dropdown</a
+              >Post</a
             >
             <div
               class="dropdown-menu dropdown-primary"
               aria-labelledby="navbarDropdownMenuLink"
             >
-              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="{% url 'myapp:post_create' %}">新規投稿</a>
               <a class="dropdown-item" href="#">Another action</a>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
