post 詳細ページ作成

--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -39,9 +39,7 @@
 							bulk of the card's content.
 						</p>
 						<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-						<button type="button" class="btn btn-light-blue btn-md">
-							Read more
-						</button>
+						<a href="{% url 'myapp:post_detail' item.id %}" class="btn btn-light-blue btn-md">もっと読む</a>
 					</div>
 				</div>
 				<!-- Card -->
