Post 更新機能作成

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -104,6 +104,12 @@
     <!--/.Navbar-->
 
 		<main class="container">
+      {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
+
 			{% block content %}
 			{% endblock %}
 		</main>
