--- a/myapp/templates/myapp/post_detail.html
+++ b/myapp/templates/myapp/post_detail.html
@@ -8,7 +8,8 @@
 			<div class="card-body">
 				<h4 class="card-title">{{ object.title }}</h4>
 				<p class="card-text">{{ object.content }}</p>
-				<a href="{% url 'myapp:post_update' object.id %}" class="btn btn-primary">更新</a>
+				<a href="{% url 'myapp:post_update' object.pk %}" class="btn btn-primary">更新</a>
+				<a href="{% url 'myapp:post_delete' object.pk %}" class="btn btn-danger">削除</a>
 			</div>
 		</div>
 	</div>
