--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -81,8 +81,7 @@
               aria-labelledby="navbarDropdownMenuLink"
             >
               <a class="dropdown-item" href="{% url 'myapp:post_create' %}">新規投稿</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="{% url 'myapp:post_list' %}">投稿一覧</a>
             </div>
           </li>
         </ul>
