--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -32,7 +32,7 @@
 					<!--Card content-->
 					<div class="card-body">
 						<!--Title-->
-						<h4 class="card-title">{{ item.title }}</h4>
+						<h4 class="card-title">{{ item.title }} <small>{{ item.author }}</small></h4>
 						<!--Text-->
 						<p class="card-text">
 							Some quick example text to build on the card title and make up the
