--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -33,11 +33,9 @@
 					<div class="card-body">
 						<!--Title-->
 						<h4 class="card-title">{{ item.title }} <small>{{ item.author }}</small></h4>
+						<p>{{ item.category }}</p>
 						<!--Text-->
-						<p class="card-text">
-							Some quick example text to build on the card title and make up the
-							bulk of the card's content.
-						</p>
+						<p class="card-text">{{ item.content }}</p>
 						<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 						<a href="{% url 'myapp:post_detail' item.id %}" class="btn btn-light-blue btn-md">もっと読む</a>
 					</div>
