--- a/myapp/templates/myapp/post_form.html
+++ b/myapp/templates/myapp/post_form.html
@@ -4,9 +4,10 @@
 <div class="row">
 	<div class="col-md-9">
 		<h2 class="pt-3 pb-3">登録・更新</h2>
-		<form action="" method="POST">
+		<form action="" method="POST" enctype="multipart/form-data">
 			{% csrf_token %}
 			<p class="form-group"><label>タイトル</label>{{ form.title }}</p>
+			<p class="form-group"><label>カテゴリー</label>{{ form.category }}</p>
 			<p class="form-group"><label>内容</label>{{ form.content }}</p>
 			<button class="btn btn-primary" type="submit">保存</button>
 		</form>
