--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -102,6 +102,7 @@
             >
               <a class="dropdown-item" href="{% url 'myapp:post_create' %}">新規投稿</a>
               <a class="dropdown-item" href="{% url 'myapp:post_list' %}">投稿一覧</a>
+              <a class="dropdown-item" href="{% url 'myapp:category_list' %}">カテゴリ一覧</a>
             </div>
           </li>
         </ul>
