サムネイル画像表示

--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -19,12 +19,20 @@
 				<div class="card mb-4">
 					<!--Card image-->
 					<div class="view overlay">
-						<img
-							class="card-img-top"
-							src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-							alt="Card image cap"
-						/>
-						<a href="#!">
+						{% if item.thumbnail %}
+							<img
+								class="card-img-top"
+								src="{{ item.thumbnail.url }}"
+								alt="{{ item.title }}"
+							/>
+						{% else %}
+							<img
+								class="card-img-top"
+								src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+								alt="Card image cap"
+							/>
+						{% endif %}
+						<a href="{% url 'myapp:post_detail' item.id %}">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
