--- a/myapp/templates/myapp/post_form.html
+++ b/myapp/templates/myapp/post_form.html
@@ -8,6 +8,7 @@
 			{% csrf_token %}
 			<p class="form-group"><label>タイトル</label>{{ form.title }}</p>
 			<p class="form-group"><label>カテゴリー</label>{{ form.category }}</p>
+			<p class="form-group"><label>サムネイル画像</label>{{ form.thumbnail }}</p>
 			<p class="form-group"><label>内容</label>{{ form.content }}</p>
 			<button class="btn btn-primary" type="submit">保存</button>
 		</form>
