組み込みフィルタ追加

--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -43,7 +43,7 @@
 						<h4 class="card-title">{{ item.title }} <small>{{ item.author }}</small></h4>
 						<p>{{ item.category }}</p>
 						<!--Text-->
-						<p class="card-text">{{ item.content }}</p>
+						<p class="card-text">{{ item.content|safe|truncatechars_html:30|linebreaksbr|urlize }}</p>
 						<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 						<a href="{% url 'myapp:post_detail' item.id %}" class="btn btn-light-blue btn-md">もっと読む</a>
 					</div>
