--- a/myapp/templates/myapp/post_detail.html
+++ b/myapp/templates/myapp/post_detail.html
@@ -13,8 +13,12 @@
 				<h4 class="card-title">{{ object.title }}</h4>
 				<p class="card-text">{{ object.content|safe|linebreaksbr|urlize }}</p>
 				<a href="{% url 'myapp:like_add' object.pk %}" class="btn" style="background-color: #ff6699; color: #fff;">お気に入りに入れる</a>
-				<a href="{% url 'myapp:post_update' object.pk %}" class="btn btn-primary">更新</a>
-				<a href="{% url 'myapp:post_delete' object.pk %}" class="btn btn-danger">削除</a>
+				<hr>
+				<a href="javascript:void(0);" onclick="window.history.back();" class="btn btn-outline-dark">戻る</a>
+				{% if object.author == request.user %}
+					<a href="{% url 'myapp:post_update' object.pk %}" class="btn btn-primary">更新</a>
+					<a href="{% url 'myapp:post_delete' object.pk %}" class="btn btn-danger">削除</a>
+				{% endif %}
 			</div>
 		</div>
 	</div>
