カテゴリ一覧ページ作成

--- a/myapp/templates/myapp/category_list.html
+++ b/myapp/templates/myapp/category_list.html
@@ -4,9 +4,22 @@
 <div class="row">
 	<div class="col-md-9">
 		<h2 class="pt-3 pb-3">Category List</h2>
-		{% for item in category_list %}
-		<p><a href="{% url 'myapp:category_detail' item.name_en %}">{{ item.name }}</a></p>
-		{% endfor %}
 	</div>
+</div>
+<div class="row">
+	{% for category in category_list %}
+		<div class="col-md-4">
+			<div class="card mb-4">
+				<div class="card-body">
+					<h4 class="card-title"><a href="{% url 'myapp:category_detail' category.name_en %}">{{ category.name }}</a></h4>
+					<hr>
+					{% for post in category.post_set.all|slice:"3" %}
+						<p><a href="{% url 'myapp:post_detail' post.pk %}" style="color: #000;">{{ post.title }}</a></p>
+					{% endfor %}
+					<p><a href="{% url 'myapp:category_detail' category.name_en %}">このカテゴリの記事を全て見る</a></p>
+				</div>
+			</div>
+		</div>
+	{% endfor %}
 </div>
 {% endblock %}
