カテゴリー　context_processors

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -105,6 +105,25 @@
               <a class="dropdown-item" href="{% url 'myapp:category_list' %}">カテゴリ一覧</a>
             </div>
           </li>
+
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              id="navbarDropdownMenuLink"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              >Category</a
+            >
+            <div
+              class="dropdown-menu dropdown-primary"
+              aria-labelledby="navbarDropdownMenuLink"
+            >
+              {% for item in category_list %}
+                <a class="dropdown-item" href="{% url 'myapp:category_detail' item.name_en %}">{{ item.name }}</a>
+              {% endfor %}
+            </div>
+          </li>
         </ul>
         <!-- Links -->
 
